# multi-subject-auth

./: .env.example  .gitignore  README.md  docker-compose.yml  goal.md
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3255d59afd1c_init_tables.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  credential.py  session.py  subject.py
backend/app/routers/: auth.py  credentials.py  mfa.py  sessions.py
backend/app/schemas/: auth.py  mfa.py  otp.py  passkey.py  session.py
backend/app/services/: auth_service.py  mfa_service.py  otp_service.py  passkey_service.py  session_service.py
backend/app/utils/: device.py  security.py
frontend/: package-lock.json
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  client.ts  mfa.ts  sessions.ts
frontend/src/components/: CredentialManager.tsx  LoginForm.tsx  MfaSetup.tsx  OtpForm.tsx  PasskeyLoginForm.tsx  SessionList.tsx  SubjectTypePicker.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  MfaChallengePage.tsx  RegisterPage.tsx
scripts/: demo.sh  dev-setup.sh
